template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Simple 3-Tier Architecture

Parameters:

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName

  DBUsername:
    Type: String
    Default: admin

  DBPassword:
    Type: String
    NoEcho: true
    MinLength: 8

Resources:

# =====================================================
# VPC
# =====================================================

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

# =====================================================
# INTERNET GATEWAY
# =====================================================

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

# =====================================================
# SUBNETS
# =====================================================

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs '']

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs '']

# =====================================================
# ROUTE TABLE
# =====================================================

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

# =====================================================
# SECURITY GROUPS
# =====================================================

  WebSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Web Security Group
      VpcId: !Ref MyVPC
      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  AppSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: App Security Group
      VpcId: !Ref MyVPC

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref WebSG

  DBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: DB Security Group
      VpcId: !Ref MyVPC

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref AppSG

# =====================================================
# WEB EC2
# =====================================================

  WebInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName

      ImageId: ami-0c02fb55956c7d316

      SubnetId: !Ref PublicSubnet

      SecurityGroupIds:
        - !Ref WebSG

# =====================================================
# APP EC2
# =====================================================

  AppInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName

      ImageId: ami-0eb38b817b93460ac

      SubnetId: !Ref PrivateSubnet1

      SecurityGroupIds:
        - !Ref AppSG

# =====================================================
# DB SUBNET GROUP
# =====================================================

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: My DB Subnet Group

      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

# =====================================================
# RDS MYSQL
# =====================================================

  MyDB:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Retain

    Properties:

      Engine: mysql

      DBInstanceClass: db.t3.micro

      AllocatedStorage: 20

      MasterUsername: !Ref DBUsername

      MasterUserPassword: !Ref DBPassword

      PubliclyAccessible: false

      VPCSecurityGroups:
        - !Ref DBSG

      DBSubnetGroupName: !Ref DBSubnetGroup

      BackupRetentionPeriod: 0

Outputs:

  WebServerId:
    Value: !Ref WebInstance

  DatabaseEndpoint:
    Value: !GetAtt MyDB.Endpoint.Address
